replace unmodifiableList to copyOf